--- a/style.css
+++ b/style.css
@@ -50,10 +50,16 @@ input[type=number] {
     margin-left: 10%;
     margin-right: 10%;
 }
+.container-hero {
+    padding-left: 10%;
+    padding-right: 10%;
+    background-color: var(--black-bg);
+}
 .header{
     width: 100%;
-    height: 48.5rem;
     background-color: var(--black-bg);
+    padding-bottom: 4.5rem;
+    margin-bottom: -4.5rem
 }
 
 .navbar{
@@ -103,7 +109,12 @@ input[type=number] {
     transition: 0.5s;
     color: #979797;
 }
-
+.list-white{
+    float: right;
+    margin-right: 1rem;
+    display: none;
+ }
+ 
 .nav-right {
     font-style: italic;
     font-weight: 600;
@@ -119,6 +130,8 @@ input[type=number] {
 /* hero section */
 
 .hero {
+    height: 48.5rem;
+    background-color: var(--black-bg);
     margin-top: 4.375rem;
     display: flex;
     justify-content: space-between;
@@ -545,8 +558,60 @@ footer{
         margin-left: 3%;
         margin-right: 3%;
     }
+    header {
+        position: sticky;
+        top: 0;
+    }
+    .header{
+        width: 100%;
+        background-color: var(--black-bg);
+        padding-bottom: 2rem;
+        margin-bottom: -2rem
+    }
+    .navbar{
+        display: flex;
+        position: sticky;
+        padding-top: 2rem;
+        top: 0;
+        background-color: var(--black-bg);
+    }
     .nav-item{
         display: none;
+    }
+    .list-white{
+        display: block;
+    }
+    .list-white img{
+        width: 50px;
+        cursor: pointer;
+    }
+    .nav-item{
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        flex-wrap: wrap;
+        flex-direction: column;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background: #343F56;
+        top: 7rem;
+        left: -200%;
+        
+        transition: all .5s;
+    }
+    .nav-item li{
+        text-align: center;
+        margin-top: 3rem;
+        line-height: 30px;
+    }
+    .nav-item li a{
+        font-size: 30px;
+    }
+    
+    
+    .nav-item.show{
+        left: 0;
     }
     .hero-left h3{
         font-size: 42px;
@@ -601,6 +666,34 @@ footer{
     }
  }
  @media (max-width: 633.98px) {
+    .nav-item{
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        flex-wrap: wrap;
+        flex-direction: column;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background: #343F56;
+        top: 7rem;
+        left: -200%;
+        
+        transition: all .5s;
+    }
+    .nav-item li{
+        text-align: center;
+        margin-top: 3rem;
+        line-height: 30px;
+    }
+    .nav-item li a{
+        font-size: 30px;
+    }
+    
+    
+    .nav-item.show{
+        left: 0;
+    }
     .hero-left h3{
         font-size: 40px;
     }
@@ -695,8 +788,37 @@ footer{
 
 /* X-Small devices (portrait phones, less than 576px)*/
 @media (max-width: 475.98px) {
+    .nav-item{
+        display: flex !important;
+        justify-content: start;
+        align-items: center;
+        flex-wrap: wrap;
+        flex-direction: column;
+        position: fixed;
+        width: 100% !important;
+        height: 100% !important;
+        background: #343F56;
+        top: 6rem;
+        left: -200%;
+        transition: all .5s;
+    }
+    .nav-item li{
+        text-align: center;
+        margin-top: 3rem;
+        line-height: 30px;
+    }
+    .nav-item li a{
+        font-size: 30px;
+    }
+    
+    
+    .nav-item.show{
+        left: 0;
+    }
     .container{
         margin: 0;
+        margin-left: 1.5%;
+        margin-right: 1.5%;
     }
     
     .nav-item{
@@ -708,13 +830,15 @@ footer{
     .hero{
         margin-top: 2rem;
         flex-wrap: wrap;
+        
     }
     .hero-left h3{
         font-size: 40px;
         line-height: 3rem;
     }
     .hero-right .desc p{
-        margin-top: 2rem
+
+        margin-top: -15rem;
     }
     .btn-hero{
         width: 7.75rem;
@@ -830,6 +954,34 @@ footer{
     }
  }
  @media (max-width: 405.98px){
+    .nav-item{
+        display: block !important;
+        justify-content: start !important;
+        align-items: center !important;
+        flex-wrap: wrap !important;
+        flex-direction: column !important;
+        position: fixed !important;
+        width: 100% !important;
+        height: 100% !important;
+        background: #343F56 !important;
+        top: 6rem !important;
+        left: -200% !important;
+        
+        transition: all .5s;
+    }
+    .nav-item li{
+        text-align: center;
+        margin-top: 3rem;
+        line-height: 30px;
+    }
+    .nav-item li a{
+        font-size: 30px;
+    }
+    
+    
+    .nav-item.show{
+        left: 0 !important;
+    }
      .rektor-card{
          margin-top: 3rem;
      }
